--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,46 +5,45 @@
   </ng-sidebar>
   <div ng-sidebar-content>
     <!--pageContent-->
-    <div class="navbar">
-      <div class="container">
-        <a href="#" class="navbar-brand d-flex align-items-center"
-          ><img src="assets/images/common/logo.png" alt=""
-        /></a>
+    <header>
+      <div class="navbar">
+        <div class="container">
+          <a href="#" class="navbar-brand d-flex align-items-center"
+            ><img src="assets/images/common/logo.png" alt=""
+          /></a>
 
-        <div class="top-nav">
-          <div class="toogle-search">
-            <button
-              class="navbar-toggler"
-              type="button"
-              (click)="toggleSidebar()"
-            >
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <app-search-bar></app-search-bar>
+          <div class="top-nav">
+            <div class="toogle-search">
+              <button
+                class="navbar-toggler"
+                type="button"
+                (click)="toggleSidebar()"
+              >
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <app-search-bar></app-search-bar>
+            </div>
+            <div class="top-menu">
+              <app-sidenav></app-sidenav>
+            </div>
+            <ul class="navigation nav-user">
+              <li>
+                <a routerLinkActive="active" routerLink="about" class="info-btn"
+                  ><i class="fc-info dark"></i
+                ></a>
+              </li>
+              <li>
+                <a href="#" class="profile-btn fc-user"
+                  ><img
+                    src="assets/images/common/user-profile.png"
+                    alt="user image"
+                /></a>
+              </li>
+            </ul>
           </div>
-          <div class="top-menu">
-            <app-sidenav></app-sidenav>
-          </div>
-          <ul class="navigation nav-user">
-            <li>
-              <a routerLinkActive="active" routerLink="about" class="info-btn"><i class="fc-info dark"></i></a>
-            </li>
-            <li>
-              <a href="#" class="profile-btn fc-user"
-                ><img
-                  src="assets/images/common/user-profile.png"
-                  alt="user image"
-              /></a>
-            </li>
-          </ul>
         </div>
       </div>
-    </div>
-
+  </header>
     <router-outlet></router-outlet>
   </div>
 </ng-sidebar-container>
-
-<!-- <app-header></app-header>
-<app-dashboard></app-dashboard> -->
-
