--- a/src/app/document-mom/document-mom.component.html
+++ b/src/app/document-mom/document-mom.component.html
@@ -8,9 +8,8 @@
                 <a ngbNavLink>Meeting Setup</a>
                 <ng-template ngbNavContent>
                     <div class="form-group row">
-                      <label for="MeetingOwner" class="col-sm-2 col-form-label">Meeting Owner</label>
-                      <div class="col-sm-9">
-
+                      <label for="MeetingOwner" class="col-md-2 col-sm-4 col-form-label">Meeting Owner</label>
+                      <div class="col-md-9 col-sm-8">
                         <input type="text" class="form-control" id="MeetingOwner" formControlName="meetingOwner">
                       </div>
                     </div>
@@ -99,7 +98,7 @@
                       <div class="form-group row">
                         <label for="SessionStartTime" class="col-sm-2 col-form-label">Session Start Time</label>
                         <div class="col-sm-3">
-                          
+
                           <ngb-timepicker [meridian]="meridian" formControlName="sessionStartTime"></ngb-timepicker>
                         </div>
                         <label for="SessionEndTime" class="col-sm-3 col-form-label text-right">Session End Time</label>
@@ -286,7 +285,7 @@
                             </table>
                           </div>
                           <div class="mt-2 table-responsive">
-                            <table class="table table-striped">
+                            <table class="table table-bordered">
                               <thead>
                               <tr>
                                 <th scope="col">Sr. No.</th>
