--- a/src/app/document-mom/document-mom.component.scss
+++ b/src/app/document-mom/document-mom.component.scss
@@ -39,3 +39,11 @@
 .hidden {
   display: none;
 }
+
+
+
+@media (max-width: 991.98px) {
+  .nav-tabs {
+    .nav-link {padding: 0.35rem 1rem;}
+  }
+}
