--- a/src/app/document-mom/document-mom.component.html
+++ b/src/app/document-mom/document-mom.component.html
@@ -184,7 +184,7 @@
                             <textarea name="remarks" id="remarks" formControlName="remarks"></textarea>
                           </td>
                         </tr>
-                        <!-- <tr>
+                        <tr>
                           <td>
                             <div class="card-header">Contact Information</div>
                               <div class="card-body" formArrayName="contacts">
@@ -210,7 +210,7 @@
                                 </div>
                               </div>
                           </td>
-                        </tr>  -->
+                        </tr> 
                         <tr>
                           <td colspan="7">
                             <a href="#" onclick="addMoreDesc()">Add More</a>
@@ -228,7 +228,7 @@
                     <div class="form-group row">
                       <div class="d-flex justify-content-center col mt-4">
                         <button class="btn-primary btn mr-2" (click)="nav.select(1)">Cancel</button>
-                        <button class="btn-secondary btn">Save and Continue</button>
+                        <button class="btn-secondary btn" (click)="nav.select(3)">Save and Continue</button>
                       </div>
                     </div>
                 </ng-template>
