--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -5,9 +5,9 @@
       <li >
         <a routerLinkActive="active" routerLink="document-mom"><i class="fc-user-plus"></i> <span>Document MOM</span></a>
         <ul class="subnav" *ngIf="nav.visible">
-          <li><a href="">Meeting Setup</a></li>
-          <li><a href="">Session Topic 1</a></li>
-          <li><a href="">Meeting Summary</a></li>
+          <li><a routerLink="document-mom">Meeting Setup</a></li>
+          <li><a routerLink="document-mom">Session Topic 1</a></li>
+          <li><a routerLink="document-mom">Meeting Summary</a></li>
         </ul>
       </li>
       <li class="all-doc"><a routerLinkActive="active" routerLink="all-documented-mom"><i class="fc-all-documents"></i> <span>All Documented MOM</span></a></li>
