--- a/src/app/all-documented-mom/all-documented-mom.component.scss
+++ b/src/app/all-documented-mom/all-documented-mom.component.scss
@@ -1,1 +1,7 @@
 .table.table-bordered td:last-child {min-width:10rem}
+
+
+@media (max-width: 575.98px) {
+  .table.table-bordered td:last-child {min-width:11rem}
+
+}
