--- a/src/app/document-mom/document-mom.component.scss
+++ b/src/app/document-mom/document-mom.component.scss
@@ -47,3 +47,22 @@
     .nav-link {padding: 0.35rem 1rem;}
   }
 }
+
+
+@media (max-width: 767.98px) {
+  .nav-tabs {
+    .nav-item {width:100%;}
+    .nav-item + .nav-item {margin-left:0rem}
+    .nav-link.active:after, .nav-pills .show>  :after {display:none}
+  }
+
+}
+
+
+@media (max-width: 575.98px) {
+  .col-form-label.text-right {text-align:left !important;padding:1rem 0.7rem 0.2rem}
+  .tab-content .main-container{padding:0;}
+  .card .card-body {padding:1.25rem 0;}
+
+}
+
